--- a/VoucherManagementSystem/Views/Home/Index.cshtml
+++ b/VoucherManagementSystem/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
     ViewData["Title"] = "Home";
 }
-<h2>Welcome to Voucher Management System</h2>
+<h2>Al Hafiz Store</h2>
 <p>Use the navigation above to manage vouchers, customers, banks, and reports.</p>
