--- a/VoucherManagementSystem/Views/Shared/_Layout.cshtml
+++ b/VoucherManagementSystem/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
-                    <i class="bi bi-receipt-cutoff"></i> VMS
+                    <i class="bi bi-receipt-cutoff"></i> AL-Hafiz
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
