--- a/VoucherManagementSystem/Views/Vouchers/Create.cshtml
+++ b/VoucherManagementSystem/Views/Vouchers/Create.cshtml
@@ -116,7 +116,7 @@
             </div>
 
             <div class="row">
-                <div class="col-md-2 mb-3">
+                <div class="col-md-2 mb-3" id="rateSection">
                     <label asp-for="Rate" class="form-label">Rate</label>
                     <input asp-for="Rate" type="number" step="0.01" class="form-control" id="rate" />
                 </div>
@@ -128,7 +128,7 @@
                     <label asp-for="GariNo" class="form-label">Gari No.</label>
                     <input asp-for="GariNo" class="form-control" />
                 </div>
-                <div class="col-md-2 mb-3">
+                <div class="col-md-2 mb-3" id="stockIncludeSection">
                     <div class="form-check mt-4">
                         <input asp-for="StockInclude" class="form-check-input" type="checkbox" id="stockInclude" />
                         <label class="form-check-label" for="stockInclude">
@@ -222,23 +222,39 @@
                     });
                 }
             });
+
+            // Sync Expense Head Rate with Amount for Expense vouchers
+            $('#ExpenseHeadRate').on('input', function() {
+                var expenseRate = parseFloat($(this).val()) || 0;
+                $('#amount').val(expenseRate.toFixed(2));
+            });
+
+            $('#amount').on('input', function() {
+                var voucherType = '@Model.VoucherType';
+                if (voucherType === 'Expense') {
+                    var amount = parseFloat($(this).val()) || 0;
+                    $('#ExpenseHeadRate').val(amount.toFixed(2));
+                }
+            });
         });
 
         function configureFormForVoucherType(type) {
             // Reset all sections
             $('#purchasingCustomerSection, #receivingCustomerSection, #bankSection, #itemSection, #expenseSection').hide();
+            $('#rateSection, #stockIncludeSection').show();
 
             switch(type) {
                 case 'Purchase':
                     $('#purchasingCustomerSection, #itemSection, #expenseSection').show();
-                    $('#stockInclude').parent().show();
+                    $('#stockIncludeSection').show();
                     break;
                 case 'Sale':
                     $('#receivingCustomerSection, #itemSection, #expenseSection').show();
-                    $('#stockInclude').parent().hide();
+                    $('#stockIncludeSection').hide();
                     break;
                 case 'Expense':
                     $('#expenseSection').show();
+                    $('#rateSection, #stockIncludeSection').hide();
                     break;
                 case 'Hazri':
                     $('#expenseSection, #itemSection').show();
