--- a/VoucherManagementSystem/Views/ExpenseHeads/Index.cshtml
+++ b/VoucherManagementSystem/Views/ExpenseHeads/Index.cshtml
@@ -20,6 +20,26 @@
         </div>
     </div>
     <div class="card-body">
+        <form method="get" asp-action="Index" class="mb-4">
+            <div class="row g-3">
+                <div class="col-md-4">
+                    <label for="fromDate" class="form-label">From Date</label>
+                    <input type="date" class="form-control" id="fromDate" name="fromDate" value="@ViewBag.FromDate" />
+                </div>
+                <div class="col-md-4">
+                    <label for="toDate" class="form-label">To Date</label>
+                    <input type="date" class="form-control" id="toDate" name="toDate" value="@ViewBag.ToDate" />
+                </div>
+                <div class="col-md-4 d-flex align-items-end">
+                    <button type="submit" class="btn btn-primary me-2">
+                        <i class="bi bi-funnel"></i> Filter
+                    </button>
+                    <a asp-action="Index" class="btn btn-secondary">
+                        <i class="bi bi-x-circle"></i> Clear
+                    </a>
+                </div>
+            </div>
+        </form>
         <table class="table table-striped" id="expenseHeadsTable">
             <thead>
                 <tr>
