--- a/VoucherManagementSystem/Views/Vouchers/Create.cshtml
+++ b/VoucherManagementSystem/Views/Vouchers/Create.cshtml
@@ -242,6 +242,8 @@
             // Reset all sections
             $('#purchasingCustomerSection, #receivingCustomerSection, #bankSection, #itemSection, #expenseSection').hide();
             $('#rateSection, #stockIncludeSection').show();
+            $('.col-md-3.mb-3:has(label[for="ProjectId"])').show();
+            $('.col-md-3.mb-3:has(label[for="GariNo"])').show();
 
             switch(type) {
                 case 'Purchase':
@@ -261,6 +263,9 @@
                     break;
                 case 'CashPaid':
                     $('#purchasingCustomerSection').show();
+                    $('#rateSection, #stockIncludeSection').hide();
+                    $('.col-md-3.mb-3:has(label[for="ProjectId"])').hide();
+                    $('.col-md-3.mb-3:has(label[for="GariNo"])').hide();
                     break;
                 case 'CashReceived':
                     $('#receivingCustomerSection').show();
