include stock in slae done

--- a/VoucherManagementSystem/Views/Vouchers/Create.cshtml
+++ b/VoucherManagementSystem/Views/Vouchers/Create.cshtml
@@ -252,7 +252,7 @@
                     break;
                 case 'Sale':
                     $('#receivingCustomerSection, #itemSection, #expenseSection').show();
-                    $('#stockIncludeSection').hide();
+                    // $('#stockIncludeSection').hide();
                     break;
                 case 'Expense':
                     $('#expenseSection').show();
