show the checkbox

--- a/VoucherManagementSystem/Views/Vouchers/Edit.cshtml
+++ b/VoucherManagementSystem/Views/Vouchers/Edit.cshtml
@@ -306,7 +306,7 @@
                     break;
                 case 'Sale':
                     $('#receivingCustomerSection, #itemSection, #expenseSection').show();
-                    $('#stockIncludeSection').hide();
+                   $('#stockIncludeSection').show();
                     break;
                 case 'Expense':
                     $('#expenseSection').show();
